# phrasekit

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  phrasekit.gemspec
.github/workflows/: ci.yml
docs/: BUILDER.md  INPUT_FORMAT.md  MINING.md  REAL_WORLD_USAGE.md  SALIENCE.md  SPELLKIT_INTEGRATION.md  TAGGING.md  VOCABULARY.md
examples/: end_to_end_demo.rb  integration.rb  test_built_artifacts.rb
examples/demo_output/: background_phrases.jsonl  build_config.json  corpus.jsonl
examples/demo_output/artifacts/: manifest.json  phrases.daac  vocab.json
examples/mining/: corpus.jsonl  mine_config.json  test_mining.rb
examples/sample_build/: config.json  phrases.jsonl
examples/scoring/: background_phrases.jsonl  domain_phrases.jsonl  score_config.json  test_scoring.rb
examples/tagging/: corpus.jsonl  test_tagging.rb
ext/phrasekit/: Cargo.toml  extconf.rb
ext/phrasekit/src/: lib.rs  manifest.rs  matcher.rs  payload.rs  policy.rs
lib/: phrasekit.rb  spellkit_stub.rb
lib/phrasekit/: miner.rb  scorer.rb  tagger.rb  version.rb
scripts/: prepare_corpus.rb  run_pipeline.rb
sig/: phrasekit.rbs
spec/: m1_matcher_spec.rb  miner_spec.rb  phrasekit_spec.rb  scorer_spec.rb  spec_helper.rb  tagger_spec.rb
src/: lib.rs
