[package]
name = "phrasekit"
version = "0.1.0"
edition = "2021"
authors = ["PhraseKit Contributors"]
license = "MIT"
description = "Ultra-fast deterministic phrase matcher using Aho-Corasick automaton"

[dependencies]
daachorse = "1.0"
magnus = { version = "0.7", features = ["rb-sys"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
notify = "6.1"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]
name = "phrasekit"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1