[package]
name = "phrasekit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "phrasekit"

[[bin]]
name = "fixture_builder"
path = "src/bin/fixture_builder.rs"

[[bin]]
name = "phrasekit_build"
path = "src/bin/phrasekit_build.rs"

[[bin]]
name = "phrasekit_mine"
path = "src/bin/phrasekit_mine.rs"

[dependencies]
magnus = { version = "0.7" }
daachorse = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
notify = "6.1"
thiserror = "1.0"
chrono = "0.4"

[dependencies.rb-sys]
version = "0.9"
features = ["stable-api-compiled-fallback"]

[dev-dependencies]
tempfile = "3.10"